### WITCH v1.0.4
1. Added an additional parameter option to set an upper bound to the HMM subsets
created (`-Z`, complementary to `-A` which is for lower bound), based on the
number of sequences in a subset.
2. Changed the behavior for creating HMM subsets. Instead of reading in the
backboen alignment at once, WITCH now reads line by line to avoid large memory
consumption if the backbone is very large.

### WITCH v1.0.3
1. Fixed an oversight in memory issue if the backbone alignment is large and
we are creating a lot of subsets (`gcmm/algorithm.py`).
2. Added default behavior to function `gcmm/task.py/handleFuture(...)` so that
return values are attached to `success` if no callback function is provided.
3. Moving towards using my generic task manager for all parallelization.

### WITCH v1.0.2
1. Added an option to bypass the initial config setup step. Use `-y`, or
`--bypass-setup` in your commandline running WITCH to avoid being asked where
to generate the config directory (will default to `~/.witch_msa`). Example:
running `witch.py -y -i [sequence files]` for the first time will directly set
up WITCH configuration file and start aligning the input sequences.

### WITCH v1.0.2a1
1. Fixed not using absolute path when setting up the directory for `main.config`.
2. Improved metavar naming for argument parameters.
3. Fixed a bug in the included MAGUS installation such that if the user has 
a file or directory named `fasttree/` in the folder where WITCH is run, MAGUS
will try to read it as the guide tree instead of creating a FastTree guide tree.
4. Changed the executable search from `usr/bin/env python` to `usr/bin/env python3`.
5. Further added systemrecursionlimit from 10000 to 20000 to combat issues with large tree.

### WITCH v1.0.1
1. First working release across different platform and different python versions.