@@ -5,6 +5,9 @@ number of sequences in a subset.
 2. Changed the behavior for creating HMM subsets. Instead of reading in the
 backboen alignment at once, WITCH now reads line by line to avoid large memory
 consumption if the backbone is very large.
+3. Changed the behavior for running HMMSearch. Now also uses my task manager to
+manage the maximum amount of concurrently running jobs (instead of submitting
+all at once).
 
 ### WITCH v1.0.3
 1. Fixed an oversight in memory issue if the backbone alignment is large and
